# tauri_cross_demo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-android.yml  build-desktop.yml  build-ios.yml  build-web.yml  build.yml  ci.yml
app/: .env.example  .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs
app/src/lib/: backend.ts  index.ts  utils.ts
app/src/lib/components/: Header.svelte  SettingsModal.svelte  TodoFilters.svelte  TodoItem.svelte  TodoList.svelte  TodoModal.svelte  TodoStats.svelte  index.ts
app/src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  Checkbox.svelte  Input.svelte  PrioritySelect.svelte  Textarea.svelte  index.ts
app/src/lib/stores/: index.ts  settings.svelte.ts  todo.svelte.ts
app/src/lib/types/: index.ts
app/src/routes/: +layout.svelte  +page.svelte
server/: Cargo.toml
server/src/: db.rs  handlers.rs  main.rs  models.rs
