[workspace]
resolver = "2"
members = ["app/src-tauri", "server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["mrx_sisyphus"]
license = "MIT"
repository = "https://github.com/mrxsisyphus/tauri_cross_demo"

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"

# Server dependencies
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "chrono",
] }
