[package]
name = "tauri-todo-app"
version.workspace = true
edition = "2021"
description = "A cross-platform todo application built with Tauri 2.0"
license.workspace = true
repository.workspace = true

[lib]
name = "tauri_todo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
